--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.6.0",
     "nuxt": "^3.3.1",
+    "prettier": "^2.8.6",
     "sass": "^1.59.3"
   }
 }
