--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "devDependencies": {
     "@huntersofbook/naive-ui-nuxt": "^0.7.1",
     "@nuxtjs/tailwindcss": "^6.6.0",
+    "@vant/nuxt": "^1.0.0",
     "nuxt": "^3.3.1",
     "prettier": "^2.8.6",
     "sass": "^1.59.3"
+  },
+  "dependencies": {
+    "vant": "^4.1.1"
   }
 }
