--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "devDependencies": {
     "@huntersofbook/naive-ui-nuxt": "^0.7.1",
     "@nuxtjs/tailwindcss": "^6.6.0",
+    "@types/node": "^18.15.5",
     "@vant/nuxt": "^1.0.0",
     "nuxt": "^3.3.1",
     "prettier": "^2.8.6",
     "sass": "^1.59.3"
   },
   "dependencies": {
+    "gray-matter": "^4.0.3",
     "vant": "^4.1.1"
   }
 }
