--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "sass": "^1.59.3"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.4.7",
     "gray-matter": "^4.0.3",
     "remark": "^14.0.2",
     "remark-html": "^15.0.2",
