--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "sass": "^1.59.3"
   },
   "dependencies": {
+    "@nuxtjs/color-mode": "^3.2.0",
     "@pinia/nuxt": "^0.4.7",
     "dayjs": "^1.11.7",
     "gray-matter": "^4.0.3",
